[package]
name = "yy_os"
version = "0.1.0"
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
[package.metadata.bootimage]
test-timeout = 90
build-command = ["xbuild"]
test-args = [
    "-device", 
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33 
[dependencies]
bootloader = "0.9.3"
volatile = "0.2.6"
spin = "0.9.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[[test]]
name = "should_panic"
harness = false
